fixeo de cursor sobre anchors y creación de README

--- a/index.html
+++ b/index.html
@@ -116,15 +116,15 @@
         <section class="footer__social-media">
           <div class="social-media__wrapper">
             <img src="./assets/ig.svg" alt="" class="logo" />
-            <p class="social-media">Instagram</p>
+            <a href="./" class="social-media">Instagram</a>
           </div>
           <div class="social-media__wrapper">
             <img src="./assets/in.svg" alt="" class="logo" />
-            <p class="social-media">Linkedin</p>
+            <a href="./" class="social-media">Linkedin</a>
           </div>
           <div class="social-media__wrapper">
             <img src="./assets/gh.svg" alt="" class="logo" />
-            <p class="social-media">Github</p>
+            <a href="./" class="social-media">Github</a>
           </div>
         </section>
       </footer>
